<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share_white"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"
          app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
    />

    <item android:id="@+id/action_goto_part"
          android:title="@string/action_goto_part"
          android:icon="@drawable/ic_goto_part_white_48"
          android:orderInCategory="7"
          app:showAsAction="ifRoom"
    />

    <item android:id="@+id/action_shrift_up"
          android:title="@string/action_shrift_up"
          android:icon="@drawable/ic_shrift_size_up_white"
          android:orderInCategory="87"
          app:showAsAction="never"
    />

    <item android:id="@+id/action_shrift_down"
          android:title="@string/action_shrift_down"
          android:icon="@drawable/ic_shrift_size_down_white"
          android:orderInCategory="88"
          app:showAsAction="never"
    />

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="99"
          app:showAsAction="never"
    />

    <item
            android:id="@+id/action_endbook"
            android:title="@string/endbook"
            android:orderInCategory="100"
            app:showAsAction="never"
    />
</menu>
